Lower line height in print version to prevent page spillover

--- a/css/base.scss
+++ b/css/base.scss
@@ -34,6 +34,7 @@ body {
     color: black;
     font-size: 12px;
     max-width: 730px;
+    line-height: 1.3;
   }
 }
 
