--- a/css/resume.css
+++ b/css/resume.css
@@ -33,6 +33,7 @@ body {
     color: black;
     font-size: 12px;
     max-width: 730px;
+    line-height: 1.3;
   }
 }
 
